# rust_web_development_with_rocket_murti

./: LICENSE  README.md  memo.md
chapter1/01HelloWorld/: main.rs
chapter1/02ComplexProgram/: main.rs
chapter1/03Packages/: Cargo.toml
chapter1/03Packages/src/: main.rs
chapter1/03Packages/src/encryptor/: rot13.rs
chapter1/04Crates/: Cargo.toml
chapter1/04Crates/src/: main.rs
chapter1/04Crates/src/cipher/: rot13.rs  rsa.rs
chapter10/our_application/: Cargo.toml  Rocket.toml
chapter10/our_application/migrations/: 20230322125405_create_posts.sql
chapter10/our_application/src/: lib.rs  main.rs
chapter10/our_application/src/catchers/: mod.rs
chapter10/our_application/src/guards/: mod.rs
chapter10/our_application/src/models/: our_date_time.rs  post.rs  post_type.rs  user.rs  user_status.rs  video_post.rs
chapter10/our_application/src/routes/: post.rs  user.rs
chapter10/our_application/src/traits/: mod.rs
chapter10/our_application/src/views/posts/: index.html.tera  show.html.tera
chapter10/our_application/src/views/users/: show.html.tera
chapter10/our_application/static/: .gitignore
chapter11/our_application/: Cargo.toml  README.md  Rocket.toml
chapter11/our_application/migrations/: 20230218113243_create_users.sql
chapter11/our_application/src/: lib.rs  main.rs
chapter11/our_application/src/guards/: auth.rs
chapter11/our_application/src/models/: mod.rs  post.rs  user.rs  worker.rs
chapter11/our_application/src/routes/: mod.rs  post.rs  session.rs  user.rs
chapter11/our_application/src/views/: template.html.tera
chapter11/our_application/src/views/sessions/: new.html.tera
chapter11/our_application/src/workers/: video.rs
chapter2/01hello_rocket/src/: main.rs
chapter2/02hello_rocket_async/: Rocket.toml
chapter3/format/: Cargo.toml
chapter3/req_res/: Cargo.toml
chapter3/req_res/src/: main.rs
chapter3/route_handlers/: Cargo.toml
chapter3/route_handlers/src/: main.rs
chapter4/01State/: Cargo.toml  Rocket.toml
chapter4/01State/migrations/: 20230210130913_create_users.sql
chapter4/01State/src/: main.rs
chapter5/our_application/: Cargo.toml  Rocket.toml
chapter5/our_application/src/: main.rs
chapter5/our_application/src/models/: our_date_time.rs  our_uuid.rs  user.rs  user_status.rs  video_post.rs
chapter5/our_application/src/routes/: mod.rs  post.rs  user.rs
chapter6/our_application/: Cargo.toml
chapter6/our_application/src/: lib.rs  main.rs
chapter6/our_application/src/models/: mod.rs  our_date_time.rs  our_uuid.rs  pagination.rs  post.rs  user.rs
chapter6/our_application/src/routes/: user.rs
chapter6/our_application/src/traits/: mod.rs
chapter7/our_application/: Cargo.toml  Rocket.toml
chapter7/our_application/src/: main.rs
chapter7/our_application/src/catchers/: mod.rs
chapter7/our_application/src/errors/: our_error.rs
chapter7/our_application/src/models/: mod.rs  our_uuid.rs  photo_post.rs  user.rs  user_status.rs
chapter7/our_application/src/routes/: mod.rs  user.rs
chapter8/our_application/: Cargo.toml  Rocket.toml
chapter8/our_application/src/: lib.rs
chapter8/our_application/src/errors/: our_error.rs
chapter8/our_application/src/models/: our_uuid.rs  text_post.rs
chapter8/our_application/src/routes/: mod.rs  user.rs
chapter8/our_application/src/views/users/: _user.html.tera  index.html.tera
chapter9/our_application/src/: main.rs
chapter9/our_application/src/fairings/: db.rs
chapter9/our_application/src/models/: pagination.rs  photo_post.rs  post.rs  text_post.rs  video_post.rs
chapter9/our_application/src/routes/: post.rs
chapter9/our_application/src/views/posts/: index.html.tera
