[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
sqlx = {version = "0.5.7", features = ["postgres", "uuid", "runtime-tokio-rustls"]}
uuid = {version = "0.8.2", features = ["v4"]}
serde = "1.0.130"