[package]
name = "our_application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "our_application"
path = "src/main.rs"

[lib]
name = "our_application"
path = "src/lib.rs"

[dependencies]
ammonia = "3.1.2"
argon2 = {version = "0.3", features = ["std"]}
async-log = "2.0.0"
chrono = "0.4"
fern = "0.6"
log = "0.4"
rand_core = {version = "0.6", features = ["std"]}
regex = "1.5.4"
sqlx = {version = "0.5.9", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
uuid = {version = "0.8.2", features = ["v4"]}
zxcvbn = "2"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["uuid"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[profile.dev]
panic = "abort"